# GpLearning

./: build.gradle  gradle.properties  settings.gradle
Annotation_Compiler/: build.gradle
Arouter/: build.gradle
Arouter/src/main/: AndroidManifest.xml
Component/: build.gradle
Component/src/main/: AndroidManifest.xml
Component/src/main/manifest/: AndroidManifest.xml
EventBusLibrary/: build.gradle
EventBusLibrary/src/main/: AndroidManifest.xml
GlideLibrary/: build.gradle
GlideLibrary/src/main/: AndroidManifest.xml
HttpRequestLibrary/: build.gradle
HttpRequestLibrary/src/main/: AndroidManifest.xml
NetStateLibrary/: build.gradle
NetStateLibrary/src/main/: AndroidManifest.xml
PluginLibrary/: build.gradle
PluginLibrary/src/main/: AndroidManifest.xml
PluginModule/: build.gradle
PluginModule/src/main/: AndroidManifest.xml
WebViewlibrary/: build.gradle
WebViewlibrary/src/main/: AndroidManifest.xml
WebViewlibrary/src/main/assets/: demo.html
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  common.h  native-lib.cpp  utils.cpp  utils.h
app/src/main/cpp/gif/: exception.c  gif.c  gif.h  opengl.c
arouter_annotation/: build.gradle
arouter_api/: build.gradle
arouter_api/src/main/: AndroidManifest.xml
arouter_compiler/: build.gradle
base/: build.gradle
base/src/main/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
kotlinlibrary/: build.gradle
kotlinlibrary/src/main/: AndroidManifest.xml
usercenter/: build.gradle
(+323 files in other folders)
